SPL C Output/p3-output.txt
p3.c:6:1: warning: declaration does not declare anything [-Wmissing-declarations]
int volatile; /*Error: you have used a varible name that is reserved for C language*/
^~~~~~~~~~~~
p3.c:8:5: error: expected identifier or '('
int break; /*Error: you have used a varible name that is reserved for C language*/
    ^
p3.c:10:5: error: expected identifier or '('
int do; /*Error: you have used a varible name that is reserved for C language*/
    ^
p3.c:12:5: error: expected identifier or '('
int for; /*Error: you have used a varible name that is reserved for C language*/
    ^
p3.c:14:5: error: expected identifier or '('
int return; /*Error: you have used a varible name that is reserved for C language*/
    ^
p3.c:16:5: error: expected identifier or '('
int switch; /*Error: you have used a varible name that is reserved for C language*/
    ^
p3.c:18:5: error: expected identifier or '('
int while; /*Error: you have used a varible name that is reserved for C language*/
    ^
p3.c:20:5: error: expected identifier or '('
int case; /*Error: you have used a varible name that is reserved for C language*/
    ^
p3.c:22:10: error: expected identifier or '('
volatile = 1;
         ^
1 warning and 8 errors generated.